[project]
name = "line-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.45.0",
    "google-auth-httplib2>=0.3.0",
    "line-bot-sdk>=3.21.0",
    "notion-client>=2.2.1",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
]
